2006-05-08	Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/symbol-browser/an_symbol_view.c
	* plugins/symbol-browser/an_symbol_prefs.c
	* plugins/symbol-browser/an_symbol_prefs.h
	* global_tags/create_global_tags.sh:
	
	Automaticly create global tags on first startup

2006-05-08  Massimo Cora'  <maxcvs@email.it>

	* configure.in:
	* plugins/project-wizard/templates/Makefile.am:
	* (added) plugins/project-wizard/templates/cpp-logo.png:
	* (added) plugins/project-wizard/templates/cpp.wiz:
	* (added) plugins/project-wizard/templates/cpp/*:

	Added a generic c++ template. It's a simple hello world.

2006-05-07  Massimo Cora' <maxcvs@email.it>

	* plugins/symbol-browser/an_symbol_view.c:
	fixed a stupid crasher.

2006-05-05  Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/project-wizard/templates/wxwin/configure.in.tpl
	* plugins/project-wizard/templates/wxwin/src/Makefile.am:
	
	Fixed WxWidgets project type

2006-05-04  Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/devhelp/htmlview.c: 
	* plugins/devhelp/plugin.c:
	Maybe I fixed the crash this time! I could at least not reproduce anymore!
	
	* plugins/project-wizard/install.c:
	Don't set a message - thanks to seb

2006-05-04  Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/devhelp/htmlview.c: 
	* plugins/symbol-browser/an_symbol_view.c:
	
	There is a weird crash in gtk_idle which I still did not completly fix!
	
	* plugins/project-wizard/install.c:
	Default to success instead of failure

2006-05-03  Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/devhelp/htmlview.c:
	* plugins/devhelp/plugin.c:
	Fixed bug and libdevhelp issue!

	* plugins/project-wizard/install.c:
	Fixed message string!

2006-05-03  Massimo Cora' <maxcvs@email.it>
       
	* plugins/symbol-browser/an_symbol_view.c:
	Avoiding to get keywords from sv_extract_type_qualifier_from_expr()

2006-05-01  Johannes Schmid <jhs@cvs.gnome.org>

	* pixmaps/Makefile.am:
	* src/main.c:
	* anjuta.desktop.in.in
	
	GNOME Goal #2.1: Install theme-friendly icons
